--- a/www/index.html
+++ b/www/index.html
@@ -79,6 +79,8 @@
     <script src="js/diary/current.js"></script>
     <script src="js/diary/detail.js"></script>
     <script src="js/diary/services.js"></script>
+    <script src="js/bluetooth.js"></script>
+    <script src="js/bluetooth/list.js"></script>
     <script src="js/common.js"></script>
     <script src="js/common/map.js"></script>
     <script src="js/common/trip-list.js"></script>
