--- a/www/index.html
+++ b/www/index.html
@@ -98,6 +98,7 @@
     <script src="js/metrics-factory.js"></script>
     <script src="js/plugin/logger.js"></script>
     <script src="js/plugin/storage.js"></script>
+    <script src="js/aware/aware.js"></script>
 
 
     <script src="lib/d3/d3.js"></script>
